# algorithm-visualizer

./: .gitignore  Algorithm Visualizer.sln  AlgorithmVisualizer.sln  CMakeLists.txt  Pathfinding Visualizer.spec  README.md  Searching Visualizer.spec  Sorting Visualizer.spec  colors.py  create_exe.bat  create_exe.cmd  create_profile.cmd  create_profile_austin.cmd  create_venv.cmd  create_venv_trusted.cmd  graph.py  include_cpp.json  main.py  pathfinder_algos.py  program.prof  requirements.txt  run_pathfinding_visualizer.py  run_search_visualizer.py  run_searching_visualizer.py  run_sort_visualizer.py  run_sorting_visualizer.py  search_algos.py  search_vis.py  sort_algos.py  values.py  vis.py  vis_path.py  vis_search.py  vis_sort.py  visualize.ipynb
algorithms/: algos_search.py  algos_sort.py
calc/: colors.py  values.py
graph/: graph_pathfinding.py  graph_search.py  graph_sort.py  node.py
lib/: README.md  cpp_py_lock.py  include_cpp.json  timer.py
math/: values.py
old/: main.py  vis_path.py
old (deprecated)/: main.py
pathfinding/: algorithms.py  colors.py  graph.py  logic.py  maps.py  node.py  values.py
search/: __init__.py  algorithms.py  colors.py  graph.py  graph_search.py  values.py
sort/: algorithms.py  algos_sort.py  colors.py  graph.py  graph_sort.py  values.py
src/: __init__.py  package_paths.py  timer.py  vis_search.py
src/pathfinding/: __init__.py  algorithms.py  colors.py  cpp_or_py.py  graph.py  logic.py  maps.py  node.py  values.py
src/py/: py.pyproj
src/search/: algorithms.py  graph.py
src/searching/: __init__.py
(+69 files in other folders)
